--- a/package.json
+++ b/package.json
@@ -18,8 +18,7 @@
     "@angular/platform-browser": "~13.3.0",
     "@angular/platform-browser-dynamic": "~13.3.0",
     "@angular/router": "~13.3.0",
-    "@apollo/client": "3.6.9",
-    "apollo-angular": "^3.0.1",
+    "axios": "^1.2.2",
     "graphql": "^16",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
