--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
     "@angular/router": "~13.3.0",
     "axios": "^1.2.2",
     "graphql": "^16",
+    "lodash": "^4.17.21",
+    "lodash.isequal": "^4.5.0",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
